# clinica-backend

./: .dockerignore  .env.example  .gitignore  434933  434933.pub  ANALISE_BACKEND.md  Dockerfile  INTEGRACAO_FRONTEND.md  README.md  SETUP_COMPLETO.md  clean-database.sh  composer.json  create-all-controllers.sh  create-all-migrations.sh  create-faturamento-module.sh  create-minimal-migrations.sh  create-ordered-migrations.sh  create-remaining-migrations.sh  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml  fix-everything.sh  fix-fatura-itens.sh  fix-git-permissions.sh  git-commit-push.sh  git-push.sh  papalino  papalino.pub  prepare-git.sh  recreate-fatura-itens.sh  renan  renan.pub  setup-completo.sh  setup-final.sh  start.sh  teste_terminal.txt  y  y.pub
agent-runtime/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
agent-runtime/app/: __init__.py  auth.py  file_parser.py  laravel_client.py  main.py  memory.py  planner.py  prompts.py  router.py  schemas.py  service.py  settings.py  tools.py
agent-runtime/observability/: grafana-dashboard.json  prometheus-alerts.yml
agent-runtime/scripts/: runtime_smoke_test.py
agent-runtime/tests/: test_chat_runtime_service.py  test_pending_action_store.py  test_runtime_bootstrap.py  test_runtime_diagnostics.py
bootstrap/: app.php
config/: app.php  chatbot.php  cors.php  cors_NOVO.php  database.php  services.php
docker/: entrypoint.sh
docs/: analise-uso-chatbot-financeiro.md  arquitetura-chatbot-langchain-mysql.md  automacoes-n8n-financeiro.md  configuracao-n8n-upload-chat-drive.md  (+10 more)
(+151 files in other folders)
