[project]
name = "medintelligence-agent-runtime"
version = "0.1.0"
description = "Runtime LangChain do MedIntelligence para ferramentas do Laravel e RAG em MySQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "openpyxl>=3.1.0",
    "pydantic-settings>=2.8.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
